--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,5 +1,9 @@
 <div class="container">
   <h1>User Skills and Levels</h1>
 
-  <%# TODO: display the skills and proficiency levels for each user ... %>
+  
+  <a href="/skills/new">Add Skill</a><br>
+   <a href="/proficiency/new">Add Proficiency to Skill</a>
 </div>
+
+
